--- a/Trackme/src/main/resources/application.properties
+++ b/Trackme/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=Trackme
 spring.datasource.url=jdbc:mysql://localhost:3306/trackme
 spring.datasource.username=root
-spring.datasource.password=Ucb.6538925
+spring.datasource.password=estudiante
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
