Feature toggle finalizado

--- a/Trackme/src/main/resources/application.properties
+++ b/Trackme/src/main/resources/application.properties
@@ -10,4 +10,10 @@ spring.jpa.show-sql=true
 
 feature.create-reports.enabled=true
 
+spring-boot-starter-web=true
+
+spring.web.resources.static-locations=classpath:/static/
+
+
+
 
