--- a/Trackme/pom.xml
+++ b/Trackme/pom.xml
@@ -75,6 +75,14 @@
             <artifactId>jakarta.validation-api</artifactId>
             <version>3.0.2</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.30</version> <!-- Usa una versión reciente -->
+            <scope>provided</scope>
+        </dependency>
+
     </dependencies>
 
     <build>
