Prubas unitarias realizadas e intgracion de filtracion de reportes

--- a/Trackme/pom.xml
+++ b/Trackme/pom.xml
@@ -19,7 +19,7 @@
     <description>TrackMe_Geolo</description>
 
     <properties>
-        <java.version>17</java.version> 
+        <java.version>17</java.version>
     </properties>
 
     <dependencies>
@@ -41,21 +41,17 @@
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
 
-        <!-- Driver MySQL para conexión con base de datos -->
         <dependency>
             <groupId>com.mysql</groupId>
             <artifactId>mysql-connector-j</artifactId>
             <scope>runtime</scope>
         </dependency>
 
-        <!-- Spring Boot Starter Test para pruebas -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
-
-
 
         <dependency>
             <groupId>org.mockito</groupId>
@@ -79,8 +75,13 @@
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
-            <version>1.18.30</version> <!-- Usa una versión reciente -->
+            <version>1.18.30</version>
             <scope>provided</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
 
     </dependencies>
