--- a/Trackme/src/main/resources/application.properties
+++ b/Trackme/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.application.name=Trackme
+
 spring.datasource.url=jdbc:mysql://localhost:3306/trackme
 spring.datasource.username=root
 spring.datasource.password=estudiante
@@ -11,9 +12,8 @@ spring.jpa.show-sql=true
 feature.create-reports.enabled=true
 
 spring-boot-starter-web=true
-
 spring.web.resources.static-locations=classpath:/static/
 
-
-
-
+logging.level.root=INFO
+logging.level.com.trackme=DEBUG
+logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n
