--- a/Trackme/src/main/resources/application.properties
+++ b/Trackme/src/main/resources/application.properties
@@ -1,8 +1,7 @@
 spring.application.name=Trackme
-
-spring.datasource.url=jdbc:mysql://localhost:3306/trackme
-spring.datasource.username=root
-spring.datasource.password=estudiante
+spring.datasource.url=jdbc:mysql://mysql-1c418c5-ucb-2025.b.aivencloud.com:16933/trackme
+spring.datasource.username=avnadmin
+spring.datasource.password=AVNS_v9DsynIVQbxEaz0QX1l
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
@@ -12,6 +11,7 @@ spring.jpa.show-sql=true
 feature.create-reports.enabled=true
 
 spring-boot-starter-web=true
+
 spring.web.resources.static-locations=classpath:/static/
 
 logging.level.root=INFO
