--- a/Trackme/src/main/resources/application.properties
+++ b/Trackme/src/main/resources/application.properties
@@ -10,6 +10,7 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
 feature.create-reports.enabled=true
+feature.create-sightings.enabled=true
 
 spring-boot-starter-web=true
 spring.web.resources.static-locations=classpath:/static/
