--- a/Trackme/src/main/resources/application.properties
+++ b/Trackme/src/main/resources/application.properties
@@ -8,7 +8,7 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
-feature.create-reports.enabled=true
+feature.create-reports.enabled=false
 feature.create-sightings.enabled=true
 
 spring-boot-starter-web=true
