--- a/Trackme/src/main/resources/application.properties
+++ b/Trackme/src/main/resources/application.properties
@@ -18,3 +18,5 @@ spring.web.resources.static-locations=classpath:/static/
 logging.level.root=INFO
 logging.level.com.trackme=DEBUG
 logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n
+
+server.port=${PORT:8080}
