Comentario para el puerto

--- a/Trackme/src/main/resources/application.properties
+++ b/Trackme/src/main/resources/application.properties
@@ -19,4 +19,5 @@ logging.level.root=INFO
 logging.level.com.trackme=DEBUG
 logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n
 
+#Puerto para deployar
 server.port=${PORT:8080}
