--- a/Trackme/src/main/resources/application.properties
+++ b/Trackme/src/main/resources/application.properties
@@ -8,6 +8,11 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
+#Ajsutar propiedades para la validacion de la BD:
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.properties.hibernate.globally_quoted_identifiers=true
+spring.jpa.properties.hibernate.hbm2ddl.import_files_sql_extractor=org.hibernate.tool.hbm2ddl.MultipleLinesSqlCommandExtractor
+
 feature.create-reports.enabled=false
 feature.create-sightings.enabled=true
 
