--- a/Trackme/src/main/resources/application.properties
+++ b/Trackme/src/main/resources/application.properties
@@ -1,28 +1,38 @@
+# ===== Configuración básica =====
 spring.application.name=Trackme
+
+
+# ===== Base de Datos (Aiven MySQL) =====
 spring.datasource.url=jdbc:mysql://mysql-1c418c5-ucb-2025.b.aivencloud.com:16933/trackme
 spring.datasource.username=avnadmin
 spring.datasource.password=AVNS_v9DsynIVQbxEaz0QX1l
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
+# Configuración de conexión (evita timeouts)
+spring.datasource.hikari.connection-timeout=30000
+spring.datasource.hikari.maximum-pool-size=5
+
+# ===== Hibernate/JPA =====
+# ¡IMPORTANTE! Desactiva modificaciones automáticas del esquema
+spring.jpa.hibernate.ddl-auto=none
+spring.sql.init.mode=never
+
+# Dialecto y configuraciones de rendimiento
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
-spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.globally_quoted_identifiers=true  # Evita errores con mayúsculas/minúsculas
 
-#Ajsutar propiedades para la validacion de la BD:
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
-spring.jpa.properties.hibernate.globally_quoted_identifiers=true
-spring.jpa.properties.hibernate.hbm2ddl.import_files_sql_extractor=org.hibernate.tool.hbm2ddl.MultipleLinesSqlCommandExtractor
-
+# ===== Feature Toggles =====
 feature.create-reports.enabled=false
 feature.create-sightings.enabled=true
 
+# ===== Spring Boot =====
 spring-boot-starter-web=true
-
 spring.web.resources.static-locations=classpath:/static/
 
+# ===== Logging =====
 logging.level.root=INFO
 logging.level.com.trackme=DEBUG
 logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n
-
-#Puerto para deployar
+# Railway usa variable PORT
 server.port=${PORT:8080}
