--- a/SistemaDesaparecidos/angular.json
+++ b/SistemaDesaparecidos/angular.json
@@ -5,11 +5,7 @@
   "projects": {
     "SistemaDesaparecidos": {
       "projectType": "application",
-      "schematics": {
-        "@schematics/angular:component": {
-          "style": "scss"
-        }
-      },
+      "schematics": {},
       "root": "",
       "sourceRoot": "src",
       "prefix": "app",
@@ -20,41 +16,38 @@
             "outputPath": "dist/SistemaDesaparecidos/browser",
             "index": "src/index.html",
             "browser": "src/main.ts",
-            "polyfills": [
-              "zone.js"
-            ],
+            "polyfills": ["zone.js"],
             "tsConfig": "tsconfig.app.json",
             "inlineStyleLanguage": "scss",
             "assets": [
               {
                 "glob": "**/*",
-                "input": "public"
-              }
+                "input": "node_modules/leaflet/dist/images",
+                "output": "./assets/leaflet-images/"  
+              },
+              {
+                "glob": "**/*",
+                "input": "public",
+                "output": "/"
+              },
+              "src/assets"  
             ],
             "styles": [
-              "src/styles.scss",
-              "node_modules/leaflet/dist/leaflet.css"
+              "node_modules/leaflet/dist/leaflet.css",  
+              "src/styles.scss"
             ],
-            "scripts": [],
+            "scripts": [
+              "node_modules/leaflet/dist/leaflet.js" 
+            ],
             "server": "src/main.server.ts",
             "outputMode": "static",
-            "ssr": {
-              "entry": "src/server.ts"
-            }
+            "ssr": { "entry": "src/server.ts" }
           },
           "configurations": {
             "production": {
               "budgets": [
-                {
-                  "type": "initial",
-                  "maximumWarning": "500kB",
-                  "maximumError": "1MB"
-                },
-                {
-                  "type": "anyComponentStyle",
-                  "maximumWarning": "4kB",
-                  "maximumError": "8kB"
-                }
+                { "type": "initial", "maximumWarning": "500kB", "maximumError": "1MB" },
+                { "type": "anyComponentStyle", "maximumWarning": "4kB", "maximumError": "8kB" }
               ],
               "outputHashing": "all"
             },
@@ -69,12 +62,8 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
-            "production": {
-              "buildTarget": "SistemaDesaparecidos:build:production"
-            },
-            "development": {
-              "buildTarget": "SistemaDesaparecidos:build:development"
-            }
+            "production": { "buildTarget": "SistemaDesaparecidos:build:production" },
+            "development": { "buildTarget": "SistemaDesaparecidos:build:development" }
           },
           "defaultConfiguration": "development"
         },
@@ -84,28 +73,16 @@
         "test": {
           "builder": "@angular-devkit/build-angular:karma",
           "options": {
-            "polyfills": [
-              "zone.js",
-              "zone.js/testing"
-            ],
+            "polyfills": ["zone.js", "zone.js/testing"],
             "tsConfig": "tsconfig.spec.json",
             "inlineStyleLanguage": "scss",
-            "assets": [
-              {
-                "glob": "**/*",
-                "input": "public"
-              }
-            ],
-            "styles": [
-              "src/styles.scss"
-            ],
-            "scripts": []
+            "assets": [{ "glob": "**/*", "input": "public" }],
+            "styles": ["src/styles.scss"],
+            "scripts": ["node_modules/leaflet/dist/leaflet.js"]
           }
         }
       }
     }
   },
-  "cli": {
-    "analytics": "7e6f4250-6c89-4b7f-9950-cd989240c7ca"
-  }
+  "cli": { "analytics": "7e6f4250-6c89-4b7f-9950-cd989240c7ca" }
 }
