Refactorizacion feature toggle avistamientos

--- a/Trackme/src/main/resources/application.properties
+++ b/Trackme/src/main/resources/application.properties
@@ -9,7 +9,7 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
 feature.create-reports.enabled=false
-feature.create-sightings.enabled=true
+feature.create-sightings.enabled=false
 
 spring-boot-starter-web=true
 
