--- a/Trackme/src/main/resources/application.properties
+++ b/Trackme/src/main/resources/application.properties
@@ -29,3 +29,12 @@ logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} -
 
 #Puerto para deployar
 server.port=${PORT:8080}
+
+# Configuración para JavaMailSender con Gmail
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=andre.prudencio@ucb.edu.bo
+spring.mail.password=eeog thdy ifwr wxmv
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
