--- a/SistemaDesaparecidos/angular.json
+++ b/SistemaDesaparecidos/angular.json
@@ -34,6 +34,7 @@
               }
             ],
             "styles": [
+              "@angular/material/prebuilt-themes/azure-blue.css",
               "node_modules/leaflet/dist/leaflet.css",
               "src/styles.scss"
             ],
@@ -80,7 +81,10 @@
               "src/assets",
               { "glob": "**/*", "input": "public", "output": "./" }
             ],
-            "styles": ["src/styles.scss"],
+            "styles": [
+              "@angular/material/prebuilt-themes/azure-blue.css",
+              "src/styles.scss"
+            ],
             "scripts": ["node_modules/leaflet/dist/leaflet.js"]
           }
         }
