--- a/SistemaDesaparecidos/package.json
+++ b/SistemaDesaparecidos/package.json
@@ -24,8 +24,11 @@
     "@angular/platform-server": "^19.0.0",
     "@angular/router": "^19.2.1",
     "@angular/ssr": "^19.0.5",
+    "chart.js": "^4.4.9",
     "express": "^4.18.2",
     "leaflet": "^1.9.4",
+    "leaflet.heat": "^0.2.0",
+    "ng2-charts": "^4.1.1",
     "rxjs": "~7.8.0",
     "swiper": "^11.2.6",
     "tslib": "^2.3.0",
