--- a/SistemaDesaparecidos/package.json
+++ b/SistemaDesaparecidos/package.json
@@ -41,6 +41,7 @@
     "@types/express": "^4.17.17",
     "@types/jasmine": "~5.1.0",
     "@types/leaflet": "^1.9.18",
+    "@types/leaflet.heat": "^0.2.4",
     "@types/node": "^18.18.0",
     "@types/swiper": "^5.4.3",
     "http-server": "^14.1.1",
